# user-image-classifier

./: .coveragerc  .gitignore  AGENTS.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build.yml
src/user_image_classifier/: __about__.py  __init__.py  cleanup.py  cleanup_cli.py  config.py  main.py  renamer.py  renamer_cli.py
test_images/: image1.json
tests/: __init__.py  test_cleanup.py  test_confidence.py  test_main.py  test_renamer.py  test_undo_system.py
